(lang dune 3.17)

(name OrderFlowETL)

(generate_opam_files true)

(source
 (github FelixLuciano/order-flow-etl))

(license LICENSE)

(documentation https://github.com/FelixLuciano/order-flow-etl?tab=readme-ov-file)

(package
 (name OrderFlowETL)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
